# b-shake

./: LICENSE  LICENSE.shake  Makefile  b-shake.cabal
B/: Shake.hs
B/Shake/: Args.hs  Classes.hs  Core.hs  Derived.hs  Directory.hs  Errors.hs  File.hs  FilePath.hs  FilePattern.hs  FileTime.hs  Files.hs  Locks.hs  Oracle.hs  Progress.hs  Rerun.hs  Shake.hs  Timing.hs  Types.hs
B/Shake/Core/: Action.hs  Log.hs  Rule.hs  Rules.hs  Run.hs
B/Shake/Core/Action/: Internal.hs
B/Shake/Core/Rule/: Internal.hs
B/Shake/Core/Rules/: Internal.hs
examples/Ninja/: All.hs  Main.hs  Parse.hs  Type.hs
