name: b-shake
version: 0.1.0.0

author: Matt "strager" Glazar and Neil Mitchell
build-type: Simple
cabal-version: >=1.8
category: Development
license-file: LICENSE
license: BSD3
maintainer: strager.nds@gmail.com
synopsis: Shake on top of b

flag portable
  default: False
  description: Obtain FileTime using portable functions

library
  exposed-modules:
    B.Shake,
    B.Shake.Classes,
    B.Shake.FilePath

  other-modules:
    B.Shake.Args,
    B.Shake.Core,
    B.Shake.Core.Action,
    B.Shake.Core.Action.Internal,
    B.Shake.Core.Log,
    B.Shake.Core.Rule,
    B.Shake.Core.Rule.Internal,
    B.Shake.Core.Rules,
    B.Shake.Core.Rules.Internal,
    B.Shake.Core.Run,
    B.Shake.Derived,
    B.Shake.Directory,
    B.Shake.Errors,
    B.Shake.File,
    B.Shake.FilePattern,
    B.Shake.FileTime,
    B.Shake.Files,
    B.Shake.Locks,
    B.Shake.Oracle,
    B.Shake.Progress,
    B.Shake.Rerun,
    B.Shake.Shake,
    B.Shake.Timing,
    B.Shake.Types,
    Paths_b_shake

  build-depends:
    b,
    base ==4.*,
    binary,
    bytestring,
    containers,
    deepseq >=1.1 && <1.4,
    directory,
    filepath,
    hashable >=1.1.2.3 && <1.3,
    process >=1.1,
    random,
    semigroups,
    time,
    transformers >=0.2 && <0.4,
    unordered-containers (>=0.1.4.3 && <0.2) || (>=0.2.1 && <0.3)

  if flag(portable)
    cpp-options: -DPORTABLE
  else
    if !os(windows)
      build-depends: unix >=2.5.1

executable ninja
  main-is: Main.hs
  hs-source-dirs: examples/ninja

  build-depends:
    b-shake,
    base,
    bytestring,
    directory,
    process,
    unordered-containers (>=0.1.4.3 && <0.2) || (>=0.2.1 && <0.3)
